--- a/b/requirements.txt
+++ b/b/requirements.txt
@@ -1,14 +1,39 @@
+azure-common==1.1.28
 azure-core==1.26.4
 azure-identity==1.17.1
 azure-keyvault-secrets==4.7.0
 azure-storage-blob==12.16.0
-Flask
-Flask-Cors
-Flask-Login
-Flask-SQLAlchemy
-gunicorn
-PyJWT
-python-dotenv
-requests
-coverage
-pymysql
+blinker==1.9.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+coverage==7.6.12
+cryptography==44.0.1
+Flask==3.1.0
+Flask-Cors==5.0.0
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+greenlet==3.1.1
+gunicorn==23.0.0
+idna==3.10
+isodate==0.7.2
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+msal==1.31.1
+msal-extensions==1.2.0
+packaging==24.2
+portalocker==2.10.1
+pycparser==2.22
+PyJWT==2.10.1
+PyMySQL==1.1.1
+python-dotenv==1.0.1
+pywin32==308
+requests==2.32.3
+six==1.17.0
+SQLAlchemy==2.0.38
+typing_extensions==4.12.2
+urllib3==2.3.0
+Werkzeug==3.1.3
