--- a/b/requirements.txt
+++ b/b/requirements.txt
@@ -30,6 +30,7 @@ pycparser==2.22
 PyJWT==2.10.1
 PyMySQL==1.1.1
 python-dotenv==1.0.1
+pytz==2025.2
 requests==2.32.3
 six==1.17.0
 SQLAlchemy==2.0.38
