--- a/.github/workflows/deployFrontend.yml
+++ b/.github/workflows/deployFrontend.yml
@@ -28,4 +28,6 @@ jobs:
           app_location: "./f" # App source code path
           api_location: "" # Api source code path - optional
           output_location: "dist" # Built app content directory - optional (MUST BE dist/ as this is created when testing build command locally)
+        env:
+          VITE_BACKEND_API_URL: ${{ secrets.VITE_BACKEND_NC_API_URL }}
           ###### End of Repository/Build Configurations ######
