--- a/f/Dockerfile
+++ b/f/Dockerfile
@@ -4,12 +4,6 @@ FROM node:20.18.0-alpine AS build
 WORKDIR /app
 COPY package*.json .
 RUN npm ci 
-ARG VITE_APP_ENV
-ENV VITE_APP_ENV=$VITE_APP_ENV
-ARG VITE_DEV_BACKEND_API_URL
-ENV VITE_DEV_BACKEND_API_URL=$VITE_DEV_BACKEND_API_URL
-ARG VITE_PROD_BACKEND_API_URL
-ENV VITE_PROD_BACKEND_API_URL=$VITE_PROD_BACKEND_API_URL
 COPY . .
 RUN npm run build
 
@@ -29,12 +23,12 @@ ENV FRONTEND_CONTAINER_APP_SERVICE_DOMAIN=$frontend_container_app_service_domain
 RUN sed -i "s/listen\s.*/listen $PORT;/" /etc/nginx/conf.d/default.conf 
 
 #Toggles the server_name in the site config file (/etc/nginx/conf.d/default.conf) from "localhost" to the domain of Azure Frontend App Service resource
-RUN if [[ $APP_ENV = "dev" ]] || [[ $APP_ENV = "prod-local" ]]; then \
+RUN if [[ $APP_ENV = "dev" ]] || [[ $APP_ENV = "prod-local-docker" ]]; then \
         server_name="localhost"; \
-    elif [[ $APP_ENV = "prod" ]]; then \
+    elif [[ $APP_ENV = "prod-docker" ]]; then \
         server_name=$FRONTEND_CONTAINER_APP_SERVICE_DOMAIN; \
     else \
-        echo "APP_ENV is not 'dev', 'prod-local' or 'prod'"; \
+        echo "APP_ENV is not 'dev', 'prod-local-docker' or 'prod-docker'"; \
     fi; \
     sed -i "s/server_name\s.*/server_name $server_name;/" /etc/nginx/conf.d/default.conf;
 
