--- a/f/package.json
+++ b/f/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@tanstack/react-query": "^5.75.5",
+    "@tanstack/react-query-devtools": "^5.75.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
