Updated deployBackend.yml: The "source .venv/bin/activate" line in step 4 was useless as each "run" block in github actions runs its own shell session thus activating a venv in one session does not persists to the next run block.

--- a/.github/workflows/deployBackend.yml
+++ b/.github/workflows/deployBackend.yml
@@ -28,17 +28,12 @@ jobs:
       - name: Install Python vevn
         run: sudo apt install python${{ env.python_version }}-venv -y
 
-     # Step 4: create and activate venv
-      - name: Create and activate env
-        working-directory: b/
-        run: |
-            python -m venv .venv
-            source .venv/bin/activate
-
-      # Step 5: Install python dependencies
+      # Step 4: create and activate venv, then install python dependencies
       - name: Install dependencies
         working-directory: b/
         run: |
+          python -m venv .venv
+          source .venv/bin/activate
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
