fixed bug in deployBackend.yml: activated the python env before running unnit test in step 5

--- a/.github/workflows/deployBackend.yml
+++ b/.github/workflows/deployBackend.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Run unit tests
         working-directory: b/
         run: |
+          source .venv/bin/activate
           python -m unittest discover
 
       # Step6: Deploy to Azure Web App
