--- a/b/requirements.txt
+++ b/b/requirements.txt
@@ -15,6 +15,7 @@ Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
+flask-swagger-ui==5.21.0
 greenlet==3.1.1
 gunicorn==23.0.0
 idna==3.10
