For easy Rasp Pi deployment: Updated project_config.py and docker-compose.yml. Now default rdbms is mysql (for easy connection db in rasp pi) and container now uses host (rasp pi) network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
       args:
         backend_container_port: ${backend_container_port}
+    network_mode: "host"
     ports:
       - "${backend_host_port}:${backend_container_port}"
     env_file:
